# boardom

YT Automator 2.0/: .gitignore  CHANNEL_SETUP.md  CLAUDE.md  future_plans.md  pyproject.toml
YT Automator 2.0/channels/ai_tech/: config.json
YT Automator 2.0/channels/biology/: config.json  topics.txt
YT Automator 2.0/channels/finance/: config.json
YT Automator 2.0/channels/history/: config.json
YT Automator 2.0/channels/physics/: config.json
YT Automator 2.0/channels/psychology/: config.json
YT Automator 2.0/channels/space/: config.json
YT Automator 2.0/config/: app_settings.json  media_sources.json
YT Automator 2.0/config/channels/: biology.json  history.json  physics.json
YT Automator 2.0/docs/superpowers/plans/: 2026-06-15-yt-automator.md
YT Automator 2.0/docs/superpowers/specs/: 2026-06-15-yt-automator-design.md
YT Automator 2.0/src/yt_automator/: cli.py  config.py  models.py  secrets.py
YT Automator 2.0/src/yt_automator/analytics/: analytics_poller.py  reward.py
YT Automator 2.0/src/yt_automator/optimizer/: bandit_optimizer.py
YT Automator 2.0/src/yt_automator/pipeline/: channel_provision.py  channel_setup.py  content_generator.py  media_sourcer.py  orchestrator.py  qa.py  run_logger.py  subtitles.py  thumbnail_generator.py  tts_engine.py  video_renderer.py  youtube_client.py
YT Automator 2.0/src/yt_automator/providers/: base.py  nasa_provider.py  pexels_provider.py  pixabay_provider.py  wikimedia_provider.py
YT Automator 2.0/src/yt_automator/utils/: time_utils.py
YT Automator 2.0/tests/: test_smoke.py
(+17 files in other folders)
